--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -47,3 +47,8 @@ html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}a{background-c
     --bs-dropdown-link-active-bg: #232b38a4 !important;
 }
 
+.type-chip {
+    padding: 0 10px;
+    border: 1px solid #fff;
+    border-radius: 15px;
+}
